--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ main,
 
 main {
   justify-content: flex-start;
-  min-height: 70vh;
+  min-height: 10vh;
   margin-bottom: 10px;
 }
 
@@ -44,14 +44,14 @@ a {
 
 footer {
   width: 100%;
-  height: 5vh;
   background-color: #ef5350;
-  margin-top: 5px;
+  position:fixed;
+  bottom:0;
+  padding:5px;
+  text-align: center;
+  font-size: smaller;
 }
 
-footer > p {
-  text-align: center;
-}
 
 input {
   padding: 5px;
@@ -135,4 +135,29 @@ a {
 h3 {
   text-align: center;
   color:white;
+}
+
+nav {
+  border-radius: 10px;
+  background-color: rgba(241, 93, 93, 0.746);
+}
+
+#searchBoxContainer { 
+  background-color: rgba(128, 128, 128, 0.555);
+  align-self: center;
+  padding: 40px;
+  border-radius: 10px;
+}
+
+#pokeContainer {
+  display:flex;
+  justify-content:center;
+  height:80vh;
+}
+
+button {
+  background-color: black;
+  color:white;
+  border-radius: 10px;
+  
 }
