--- a/main.css
+++ b/main.css
@@ -161,3 +161,9 @@ button {
   border-radius: 10px;
   
 }
+
+#pokeSkillsContainer {
+  display:flex;
+  padding: 10px;
+  justify-content: space-between;
+}
