--- a/css/games.css
+++ b/css/games.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-image: url(../pokedex/images/pbBackround.jpg);
+    background-image: url(/images/pbBackround.jpg);
   }
   
   
