--- a/pokeGame/public/styles.css
+++ b/pokeGame/public/styles.css
@@ -135,6 +135,15 @@ main.revealed #answer {
   grid-template-columns: 1fr 1fr;
   grid-gap: 12px;
 }
+footer {
+  width: 100%;
+  height: 5vh;
+  background-color: #ef5350;
+  margin-bottom:2rem;
+}
+footer > p {
+  text-align: center;
+}
 
 @keyframes wiggle {
   0% { transform: rotate(0deg); }
