--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background: black url("../pokemonWebsite/images/pbBackround.jpg") no-repeat fixed center;
+  background: black url("/images/pbBackround.jpg") no-repeat fixed center;
 }
 
 
