--- a/css/games.css
+++ b/css/games.css
@@ -1,19 +1,31 @@
+a,
+.error {
+  font-weight: bold;
+}
 
+footer,
+a {
+  color: #ffffff;
+}
+
+footer {
+  width: 100%;
+  background-color: #ef5350;
+  position:fixed;
+  bottom:0px;
+  padding:5px;
+  text-align: center;
+  font-size: smaller;
+}
+
+a {
+  text-decoration: none;
+}
 
 body{
     background-image: url(../images/pbBackround.jpg);
   }
   
-  
-  footer {
-    width: 100%;
-    height: 5vh;
-    background-color: #ef5350;
-    margin-bottom:2rem;
-  }
-  footer > p {
-    text-align: center;
-  }
   .infoText{
       text-indent: 2rem;
   }
