--- a/pokeGame/public/styles.css
+++ b/pokeGame/public/styles.css
@@ -1,7 +1,38 @@
+#searchBtn {
+  background-color: black;
+  color:white;
+  margin-left: 5px;
+  box-shadow: none;
+}
+
+footer,
+a {
+  color: #ffffff;
+}
+
+a,
+.error {
+  font-weight: bold;
+}
+
+footer {
+  width: 100%;
+  background-color: #ef5350;
+  position:fixed;
+  bottom:0;
+  padding:5px;
+  text-align: center;
+  font-size: smaller;
+  margin-bottom: 0rem;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0;
-  background-color: #000;
-  color: #fff;
+  background-image: url("../../images/pbBackround.jpg");
 }
 
 main {
@@ -10,7 +41,17 @@ main {
   background-image: url('https://res.cloudinary.com/dzynqn10l/image/upload/v1633196203/Msc/pokemon-bg_ig4uv3.jpg');
   background-size: 110%;
   background-repeat: no-repeat;
+  margin-left: 670px;
+  margin-top: 200px;
 }
+
+/* #pokemonGameContainer {
+  display:flex;
+  height:100vh;
+  width: 100vw;
+  align-content: center;
+  justify-content: center;
+} */
 
 #pokemon-container {
   height: 355px;
@@ -134,15 +175,6 @@ main.revealed #answer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 12px;
-}
-footer {
-  width: 100%;
-  height: 5vh;
-  background-color: #ef5350;
-  margin-bottom:2rem;
-}
-footer > p {
-  text-align: center;
 }
 
 @keyframes wiggle {
